projectcontour/tests/nginx-route.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    com.objectway/expose: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  hostnames: 
  - nginx.objectway.it
  parentRefs:
  - kind: Gateway
    name: contour
    namespace: projectcontour
  rules:
  - backendRefs:
    - name: nginx
      port: 80
