projectcontour/tests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
  name: my-route
  namespace: pippo
spec:
  parentRefs:
  - kind: Gateway
    name: foo-gateway
    namespace: pippo
  rules:
  - backendRefs:
    - name: foo-svc
      port: 8080
